networking/allow-grpc-traffic-global.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "productpage-allow-grpc"
  namespace: default
spec:
  rules:
    - to:
        - operation:
            methods: ["POST"]
